--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
 BENELUX, CHANGES
 
 
-#### 0.2.0 (2009-09-??) ###############################
+#### 0.3.0 (2009-09-30) ###############################
+
+Initial public release
+
+
