--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 BENELUX, CHANGES
 
 
+#### 0.3.2 (2009-10-02) ###############################
+
+* CHANGE: Major performance improvement.
+
+#### 0.3.1 (2009-09-30) ###############################
+
+* FIXED: Rubygems versioning issue. 
+
 #### 0.3.0 (2009-09-30) ###############################
 
 Initial public release
