--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,13 @@
 BENELUX, CHANGES
 
 
-#### 0.4.1 (2009-10-??) ###############################
+#### 0.4.1 (2009-10-06) ###############################
 
 * FIXED: Nil @thread error in reporter
+* CHANGE: Reporter starts only one thread.
 
-#### 0.4.0 (2009-10-06) ###############################
+
+#### 0.4.0 (2009-10-05) ###############################
 
 * CHANGE: All tag values are stored as strings. Keys can be anything.
 * CHANGE: Removed object-specific timelines
