--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@ BENELUX, CHANGES
 * CHANGE: Removed reporter
 * CHANGE: Take advantage of Ruby's accidentally thread-safe 
   Arrays and use global timeline
+* CHANGE: Removed Timeline#counts
 
 
 #### 0.4.3 (2009-10-08) ###############################
