--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ BENELUX, CHANGES
 * FIXED: Timeline#clear
 * ADDED: Thread#rotate_timeline
 * ADDED: Stats#clear
-
+* ADDED: Selectable#rfilter
 
 #### 0.5.0 (2009-10-21) ###############################
 
