--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,11 @@
 BENELUX, CHANGES
 
+
+#### 0.5.3 (2009-11-02) ###############################
+
+* FIXED: Process dead threads only once
+
+
 #### 0.5.2 (2009-11-02) ###############################
 
 * ADDED: Selectable#rfilter
