--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,7 @@ BENELUX, CHANGES
 #### 0.5.3 (2009-11-02) ###############################
 
 * FIXED: Process dead threads only once
+* FIXED: Copy default tags when rotating timelines
 
 
 #### 0.5.2 (2009-11-02) ###############################
