--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,9 @@
 BENELUX, CHANGES
 
+#### 0.5.4 (2010-01-13) ###############################
+
+* CHANGE: Timeline#add_message now supports objects of any type (not just Strings)
+
 
 #### 0.5.3 (2009-11-16) ###############################
 
