--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,12 @@
 BENELUX, CHANGES
 
+#### 0.5.5 (2010-01-16) ###############################
+
+* ADDED: Benelux.bm 
+
 #### 0.5.4 (2010-01-13) ###############################
 
 * CHANGE: Timeline#add_message now supports objects of any type (not just Strings)
-
 
 #### 0.5.3 (2009-11-16) ###############################
 
