--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,9 @@
 BENELUX, CHANGES
 
+#### 0.5.6 (2010-01-??) ###############################
+
+* ADDED: Benelux::Tms#to_f
+
 #### 0.5.5 (2010-01-16) ###############################
 
 * ADDED: Benelux.bm 
