--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,7 @@ BENELUX, CHANGES
 
 * ADDED: Benelux::Tms#to_f
 * ADDED: Benelux.timeline_chunk, Benelux.timeline_updates
+* ADDED: Calculator#to_json
 
 
 #### 0.5.5 (2010-01-16) ###############################
