--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 BENELUX, CHANGES
 
-#### 0.5.10 (2010-03-15) ###############################
+#### 0.5.11 (2010-03-15) ##############################
+
+* FIXED: Don't reset packed_methods!
+
+#### 0.5.10 (2010-03-15) ##############################
 
 * ADDED: Benelux.reset
 
