--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,8 @@
 BENELUX, CHANGES
 
+#### 0.5.17 (2011-02-26) ##############################
+
+* FIXED: Fix for bug in Ruby 1.9.2 (same fix as in 0.6.1)
 
 #### 0.5.16 (2010-06-08) ##############################
 
